<resources>

    <string name="app_name">Arqui1P1</string>
    <string name="Enviar">Enviar</string>
    <string name="Borrar">Borrador</string>
    <string name="Rojo">Rojo</string>
    <string name="Negro">Negro</string>
    <string name="Azul">Azul</string>
    <string name="Galeria">Galería</string>
    <string name="Dibujar">Dibujar</string>
    <string name="Anterior">Anterior</string>
    <string name="Imprimir">Imprimir</string>
    <string name="Siguiente">Siguiente</string>
</resources>
