<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Lienzo">

    <com.example.arqui1p1.Dibujo
        android:id="@+id/draw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"></com.example.arqui1p1.Dibujo>

    <Button
        android:id="@+id/Enviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="44dp"
        android:text="@string/Enviar"></Button>

    <Button
        android:id="@+id/Borrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="100dp"
        android:layout_marginBottom="44dp"
        android:text="@string/Borrar" />"

    <Button
        android:id="@+id/Rojo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="88dp"
        android:text="@string/Rojo" />"

    <Button
        android:id="@+id/Negro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="100dp"
        android:layout_marginBottom="88dp"
        android:text="@string/Negro" />"

    <Button
        android:id="@+id/Azul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="200dp"
        android:layout_marginBottom="88dp"
        android:text="@string/Azul" />"


</RelativeLayout>